--- a/src/GloomChars.Api/GloomChars.Api.csproj
+++ b/src/GloomChars.Api/GloomChars.Api.csproj
@@ -33,5 +33,6 @@
   <ItemGroup>
     <Compile Remove="DatabaseConfig.cs" />
     <Compile Remove="EitherExtensions.cs" />
+    <Compile Remove="Controllers\ValuesController.cs" />
   </ItemGroup>
 </Project>
