Added character patch plus deck api

--- a/src/GloomChars.Api/GloomChars.Api.csproj
+++ b/src/GloomChars.Api/GloomChars.Api.csproj
@@ -16,6 +16,7 @@
     <Folder Include="Authentication\" />
     <Folder Include="Errors\" />
     <Folder Include="Characters\" />
+    <Folder Include="Decks\" />
   </ItemGroup>
 
   <ItemGroup>
