--- a/src/GloomChars.Tests/GloomChars.Tests.csproj
+++ b/src/GloomChars.Tests/GloomChars.Tests.csproj
@@ -10,6 +10,13 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
+    <PackageReference Include="Moq" Version="4.10.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GloomChars.Authentication\GloomChars.Authentication.csproj" />
+    <ProjectReference Include="..\GloomChars.Characters\GloomChars.Characters.csproj" />
+    <ProjectReference Include="..\GloomChars.Common\GloomChars.Common.csproj" />
+    <ProjectReference Include="..\GloomChars.GameData\GloomChars.GameData.csproj" />
+  </ItemGroup>
 </Project>
